--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=3e1a77f956eae1e9dd319a03071ce091&libraries=services,clusterer,drawing"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
